[gd_scene load_steps=49 format=2]

[ext_resource path="res://src/screens/main_scene/Camera.gd" type="Script" id=1]
[ext_resource path="res://sprites/ascent-2/rock2_layer-1.png" type="Texture" id=2]
[ext_resource path="res://sprites/ascent-2/ground-3.png" type="Texture" id=3]
[ext_resource path="res://sprites/ascent-2/rock1_layer-1.png" type="Texture" id=4]
[ext_resource path="res://sprites/ascent-2/rock3_layer-1.png" type="Texture" id=5]
[ext_resource path="res://sprites/ascent-1/tree-1.png" type="Texture" id=6]
[ext_resource path="res://src/characters/player1/Player1.gd" type="Script" id=7]
[ext_resource path="res://src/characters/player1/Player1.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/characters/player2/Player2.gd" type="Script" id=9]
[ext_resource path="res://src/characters/player2/Player2.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/enigma/ciel.png" type="Texture" id=11]
[ext_resource path="res://sprites/sky/cloud_white.png" type="Texture" id=12]
[ext_resource path="res://src/screens/entrance/CloudLayer.gd" type="Script" id=13]
[ext_resource path="res://sprites/sky/cloud_yellow.png" type="Texture" id=14]
[ext_resource path="res://sprites/ascent-1/ground-1.png" type="Texture" id=15]
[ext_resource path="res://sprites/enigma/rocher3_layer-3.png" type="Texture" id=16]
[ext_resource path="res://sprites/tileset/Tileshet.tres" type="TileSet" id=17]
[ext_resource path="res://sprites/ascent-2/arch.png" type="Texture" id=18]
[ext_resource path="res://sprites/characters/tanuki-cycle_0001.png" type="Texture" id=19]
[ext_resource path="res://sprites/characters/tanuki-cycle_0002.png" type="Texture" id=20]
[ext_resource path="res://sprites/ascent-1/tree-2.png" type="Texture" id=21]
[ext_resource path="res://sprites/ascent-1/tree-3.png" type="Texture" id=22]
[ext_resource path="res://sprites/encounter/tree3.png" type="Texture" id=23]
[ext_resource path="res://sprites/encounter/tree6.png" type="Texture" id=24]
[ext_resource path="res://sprites/encounter/tree1.png" type="Texture" id=25]
[ext_resource path="res://sprites/enigma/Arbre-1.png" type="Texture" id=26]
[ext_resource path="res://sprites/ascent-1/lantern.png" type="Texture" id=27]
[ext_resource path="res://src/screens/ascent-2/DialogueAscent.gd" type="Script" id=28]
[ext_resource path="res://fonts/Formal436BT.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://sprites/enigma/rocher1_layer-3.png" type="Texture" id=30]
[ext_resource path="res://sprites/dialogues/bulle.png" type="Texture" id=31]
[ext_resource path="res://sprites/dialogues/name.png" type="Texture" id=32]
[ext_resource path="res://sprites/dialogues/nao-dialogue.png" type="Texture" id=33]
[ext_resource path="res://sprites/dialogues/inu-dialogue.png" type="Texture" id=34]
[ext_resource path="res://src/screens/ascent-2/TanukiAscent.gd" type="Script" id=35]
[ext_resource path="res://src/triggers/Transition.gd" type="Script" id=36]
[ext_resource path="res://src/screens/battle/Battle.tscn" type="PackedScene" id=37]

[sub_resource type="CapsuleShape2D" id=18]
radius = 46.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.375, 55 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 29 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Formal436BT.ttf"

[sub_resource type="DynamicFont" id=15]
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://fonts/Formal436BT.ttf"

[sub_resource type="DynamicFont" id=16]
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://fonts/Formal436BT.ttf"

[sub_resource type="DynamicFont" id=17]
font_data = SubResource( 13 )

[sub_resource type="CapsuleShape2D" id=19]
radius = 47.0
height = 0.0

[node name="Node2D" type="Node2D"]

[node name="Starter" type="Node2D" parent="."]

[node name="MultiTargetCamera2D" type="Camera2D" parent="Starter"]
position = Vector2( 72, 0 )
limit_left = 0
limit_top = 0
limit_right = 1890
limit_bottom = 1080
editor_draw_limits = true

[node name="Camera2D" type="Camera2D" parent="Starter"]
position = Vector2( -62, -111 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1035
limit_smoothed = true
editor_draw_limits = true
script = ExtResource( 1 )
object1 = NodePath("../../Decor/Player1")
object2 = NodePath("../../Decor/Player2")

[node name="TileMap" type="TileMap" parent="Starter"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -20, -11 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 32, 12 )
show_collision = true
format = 1
tile_data = PoolIntArray( 3014716, 1, 0, 3080252, 1, 0, 3145788, 1, 0, 3211324, 1, 0, 3276860, 1, 0, 3342396, 1, 0, 3407932, 1, 0, 3473468, 1, 0, 3539004, 1, 0, 3604540, 1, 0, 3670076, 1, 0, 3735612, 1, 0, 3801148, 1, 0, 3866684, 1, 0, 3932220, 1, 0, 3997756, 1, 0, 4063274, 0, 0, 4063275, 1, 0, 4063276, 1, 0, 4063277, 1, 0, 4063278, 1, 0, 4063279, 1, 0, 4063280, 1, 0, 4063281, 1, 0, 4063282, 1, 0, 4063283, 1, 0, 4063284, 1, 0, 4063285, 1, 0, 4063286, 1, 0, 4063287, 1, 0, 4063288, 1, 0, 4063289, 1, 0, 4063290, 1, 0, 4063291, 1, 0, 4063292, 1, 0, 4128801, 0, 0, 4128802, 1, 0, 4128803, 1, 0, 4128804, 1, 0, 4128805, 1, 0, 4128806, 1, 0, 4128807, 1, 0, 4128808, 1, 0, 4128809, 1, 0, 4194333, 0, 0, 4194334, 1, 0, 4194335, 1, 0, 4194336, 1, 0, 4259867, 0, 0, 4259868, 1, 0, 4325402, 0, 0, 4390937, 0, 0, 4456471, 0, 0, 4456472, 1, 0, 4522006, 0, 0, 4587541, 0, 0, 4653076, 0, 0, 4718611, 0, 0, 4784146, 0, 0, 4849681, 0, 0, 4915215, 0, 0, 4915216, 1, 0, 4980749, 0, 0, 4980750, 1, 0, 5046283, 0, 0, 5046284, 1, 0, 5111818, 0, 0, 5177353, 0, 0, 5242888, 0, 0, 5308423, 0, 0, 5373952, 536870913, 0, 5373953, 536870913, 0, 5373954, 536870913, 0, 5373955, 536870913, 0, 5373956, 536870913, 0, 5373957, 536870913, 0, 5373958, 536870913, 0 )

[node name="Decor" type="Node2D" parent="."]

[node name="TanukiAscent" type="Area2D" parent="Decor"]
script = ExtResource( 35 )
player1 = NodePath("../Player1")
player2 = NodePath("../Player2")
DialogueTanukiAscent = NodePath("../DialogueTanukiAscent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/TanukiAscent"]
position = Vector2( 1545, 672 )
shape = SubResource( 18 )

[node name="TanukiBody" type="KinematicBody2D" parent="Decor/TanukiAscent"]
position = Vector2( 1574, 593 )
collision_mask = 2

[node name="TanukiSprite" type="AnimatedSprite" parent="Decor/TanukiAscent/TanukiBody"]
use_parent_material = true
position = Vector2( -30, 93 )
scale = Vector2( 0.0761057, 0.0761057 )
frames = SubResource( 1 )
animation = "walk"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/TanukiAscent/TanukiBody"]
position = Vector2( -31.625, 80 )
shape = SubResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Decor"]
layer = 1

[node name="-1 Plan" type="ParallaxLayer" parent="Decor/ParallaxBackground"]
motion_scale = Vector2( 1.5, 1 )

[node name="ground-grass" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 1961, 1184 )
rotation = -0.722566
scale = Vector2( 0.24368, 0.156403 )
texture = ExtResource( 15 )

[node name="ground-grass2" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 1330.82, 1037.36 )
rotation = -0.966912
scale = Vector2( 0.136296, 0.156218 )
texture = ExtResource( 15 )

[node name="ground-grass3" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 839.334, 1124.64 )
rotation = -1.14843
scale = Vector2( 0.134871, 0.120646 )
texture = ExtResource( 15 )

[node name="rock7" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 2774, 904 )
scale = Vector2( 0.615308, 0.653521 )
texture = ExtResource( 4 )
flip_h = true

[node name="rock6" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 2026, 933 )
scale = Vector2( 0.412447, 0.353904 )
texture = ExtResource( 5 )

[node name="rock5" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 390, 1013 )
scale = Vector2( 0.114684, 0.087239 )
texture = ExtResource( 2 )

[node name="rock4" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 1687, 920 )
scale = Vector2( 0.615308, 0.481056 )
texture = ExtResource( 4 )

[node name="rock3" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 1193, 885.75 )
scale = Vector2( 0.412447, 0.374685 )
texture = ExtResource( 5 )

[node name="rock1" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 987, 959 )
scale = Vector2( 0.652231, 0.332394 )
texture = ExtResource( 4 )

[node name="rock2" type="Sprite" parent="Decor/ParallaxBackground/-1 Plan"]
position = Vector2( 1162, 999 )
scale = Vector2( 0.27798, 0.211457 )
texture = ExtResource( 2 )

[node name="Player1" parent="Decor" groups=["Player"] instance=ExtResource( 8 )]
position = Vector2( 101, 932 )
scale = Vector2( 1.4, 1.4 )
collision_mask = 2
script = ExtResource( 7 )
player2 = NodePath("../Player2")

[node name="Player2" parent="Decor" groups=["Player"] instance=ExtResource( 10 )]
position = Vector2( 46, 900 )
scale = Vector2( 1.4, 1.4 )
collision_mask = 2
script = ExtResource( 9 )
player1 = NodePath("../Player1")

[node name="DialogueTanukiAscent" type="CanvasLayer" parent="Decor"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 28 )
player1 = NodePath("../Player1")
player2 = NodePath("../Player2")
tanukibody = NodePath("../TanukiAscent/TanukiBody")

[node name="Inu-Sprite" type="Sprite" parent="Decor/DialogueTanukiAscent"]
position = Vector2( 721.251, 464.743 )
scale = Vector2( 0.0930317, 0.0930317 )
texture = ExtResource( 34 )

[node name="Nao-Sprite" type="Sprite" parent="Decor/DialogueTanukiAscent"]
position = Vector2( 303.453, 449.579 )
scale = Vector2( 0.220554, 0.220554 )
texture = ExtResource( 33 )

[node name="Tanuki-Sprite" type="Sprite" parent="Decor/DialogueTanukiAscent"]
position = Vector2( 681.5, 448.638 )
scale = Vector2( 0.164209, 0.164209 )
texture = ExtResource( 19 )
flip_h = true

[node name="NinePatchRect" type="NinePatchRect" parent="Decor/DialogueTanukiAscent"]
margin_left = 264.406
margin_top = 443.465
margin_right = 731.406
margin_bottom = 560.466
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackName" type="Sprite" parent="Decor/DialogueTanukiAscent/NinePatchRect"]
position = Vector2( 106.206, 11.25 )
scale = Vector2( 0.205882, 0.205882 )
texture = ExtResource( 32 )

[node name="Name" type="RichTextLabel" parent="Decor/DialogueTanukiAscent/NinePatchRect"]
anchor_left = -0.00836404
anchor_top = 0.00147867
anchor_right = -0.00836404
anchor_bottom = 0.00147867
margin_left = 85.0
margin_right = 141.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( -79, -6 )
custom_fonts/mono_font = SubResource( 14 )
custom_fonts/normal_font = SubResource( 15 )
text = "Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Message" type="RichTextLabel" parent="Decor/DialogueTanukiAscent/NinePatchRect"]
anchor_left = 0.012848
anchor_top = -0.025641
anchor_right = 0.012848
anchor_bottom = -0.025641
margin_left = 32.0
margin_top = 25.0
margin_right = 438.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( -79, -6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = SubResource( 16 )
custom_fonts/normal_font = SubResource( 17 )
text = "Message"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ParallaxBackground2" type="ParallaxBackground" parent="Decor"]

[node name="Back" type="ParallaxLayer" parent="Decor/ParallaxBackground2"]
motion_mirroring = Vector2( 1920, 0 )

[node name="background" type="Sprite" parent="Decor/ParallaxBackground2/Back"]
position = Vector2( 923, 531 )
scale = Vector2( 0.420693, 1.79795 )
texture = ExtResource( 11 )

[node name="Clouds" type="ParallaxLayer" parent="Decor/ParallaxBackground2"]
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 13 )

[node name="Cloud Yellow3" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 1683, 652 )
scale = Vector2( 0.082, 0.08 )
texture = ExtResource( 14 )

[node name="Cloud Yellow" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 494, 660 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 14 )

[node name="Cloud White" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 155, 713 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 12 )

[node name="Cloud White2" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 99, 783 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 12 )

[node name="Cloud White3" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 538, 708 )
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 12 )

[node name="Cloud White6" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 1267, 736 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 12 )

[node name="Cloud White7" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 1392, 679 )
scale = Vector2( 0.1, 0.11 )
texture = ExtResource( 12 )

[node name="Cloud White4" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 946, 645 )
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 12 )

[node name="Cloud Yellow2" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 1180, 691 )
scale = Vector2( 0.112, 0.13 )
texture = ExtResource( 14 )

[node name="Cloud White5" type="Sprite" parent="Decor/ParallaxBackground2/Clouds"]
position = Vector2( 1668, 663 )
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 12 )

[node name="Back-Mountain" type="ParallaxLayer" parent="Decor/ParallaxBackground2"]
motion_scale = Vector2( 1.1, 1 )

[node name="Mountains" type="Sprite" parent="Decor/ParallaxBackground2/Back-Mountain"]
position = Vector2( 555.08, 777.573 )
scale = Vector2( 0.849654, 0.988217 )
texture = ExtResource( 30 )

[node name="Mountains2" type="Sprite" parent="Decor/ParallaxBackground2/Back-Mountain"]
position = Vector2( 1596.67, 664.256 )
scale = Vector2( 0.691575, 1.00095 )
texture = ExtResource( 16 )
flip_h = true

[node name="Mountains3" type="Sprite" parent="Decor/ParallaxBackground2/Back-Mountain"]
position = Vector2( 2400, 626 )
scale = Vector2( 1.08577, 1.26284 )
texture = ExtResource( 30 )
flip_h = true

[node name="Tree" type="ParallaxLayer" parent="Decor/ParallaxBackground2"]

[node name="tree-1" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 268.051, 861.939 )
scale = Vector2( 0.110232, 0.115779 )
texture = ExtResource( 6 )
flip_h = true

[node name="tree-2" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 1080, 581 )
scale = Vector2( 0.212851, 0.171482 )
texture = ExtResource( 21 )

[node name="tree-3" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 600.5, 755.81 )
scale = Vector2( 0.167398, 0.156329 )
texture = ExtResource( 22 )

[node name="tree-4" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 417, 784 )
scale = Vector2( 0.672754, 1.04176 )
texture = ExtResource( 24 )

[node name="tree-6" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 841, 637 )
scale = Vector2( 0.624245, 0.58926 )
texture = ExtResource( 26 )

[node name="tree-7" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 125, 817 )
scale = Vector2( 0.720386, 0.700702 )
texture = ExtResource( 23 )

[node name="tree-8" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 1515, 580 )
scale = Vector2( 0.652239, 0.773874 )
texture = ExtResource( 25 )

[node name="tree-9" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 1763, 589 )
scale = Vector2( 0.220989, 0.147045 )
texture = ExtResource( 21 )

[node name="tree-10" type="Sprite" parent="Decor/ParallaxBackground2/Tree"]
position = Vector2( 1358, 596 )
scale = Vector2( 0.720386, 0.700702 )
texture = ExtResource( 23 )

[node name="2e Plan" type="ParallaxLayer" parent="Decor/ParallaxBackground2"]

[node name="lantern" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 782, 757 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern2" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 608, 810 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern3" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 428, 863 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern4" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 233, 911 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern5" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 1036, 702 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern6" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 1266, 701 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern7" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 1474, 681 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="lantern8" type="Sprite" parent="Decor/ParallaxBackground2/2e Plan"]
position = Vector2( 1722, 679 )
scale = Vector2( 0.151, 0.145 )
texture = ExtResource( 27 )
offset = Vector2( -61.7949, 46.5117 )

[node name="Ground" type="ParallaxLayer" parent="Decor/ParallaxBackground2"]

[node name="Arch" type="Sprite" parent="Decor/ParallaxBackground2/Ground"]
position = Vector2( 1810, 625 )
scale = Vector2( 0.19704, 0.194434 )
texture = ExtResource( 18 )

[node name="Ground" type="Sprite" parent="Decor/ParallaxBackground2/Ground"]
position = Vector2( 1025, 941.47 )
scale = Vector2( 0.204996, 0.236735 )
texture = ExtResource( 3 )

[node name="Area2DTransition" type="Area2D" parent="Decor"]
position = Vector2( 1234, -265 )
script = ExtResource( 36 )
scene = ExtResource( 37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decor/Area2DTransition"]
position = Vector2( 407, 949 )
shape = SubResource( 19 )

[connection signal="body_entered" from="Decor/Area2DTransition" to="Decor/Area2DTransition" method="_on_Area2DTransition_body_entered"]
